# formantboard

./: .eslintrc  .gitignore  .prettierignore  CHANGELOG.md  README.md  auto-imports.d.ts  components.d.ts  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vercel.json  vite.config.ts
api/: ai-lib.ts  ai-payload.ts  ai.ts
public/: agents.txt  api.md  llms.txt
public/lib/: TextEncoder.js
public/processors/: PitchProcessor.js  WasmAudioProcessor.js
src/: App.tsx  App.vue  ai.ts  auto-imports.d.ts  components.d.ts  constants.ts  main.ts  main.tsx  nodes.ts  routes.tsx  store.ts  tailwind.css  types.ts  utils.ts  wasm.ts
src/components/: AIPromptInput.tsx  F0Selector.tsx  F0Selector.vue  FormantBar.vue  IPASelector.tsx  IPASelector.vue  Keyboard.tsx  Keyboard.vue  Knob.vue  MicButton.tsx  MicButton.vue  MidiButton.tsx  MidiButton.vue  MidiInput.vue  Piano.vue  PianoBar.vue  PianoViz.vue  Player.vue  Readout.tsx  Readout.vue  SettingsPanel.tsx  SettingsPanel.vue  ThemeModeSelect.tsx  VBtn.vue  VBtnToggle.vue  VCheckbox.vue  VNum.vue  VSelect.vue  VSwitch.vue  VTextField.vue  Visualizer.tsx  Visualizer.vue  VowelChart.vue  VowelSelector.vue  index.ts  vui-toggle.ts
src/hooks/: useAPI.ts  useAPIValidation.ts  useFormantboardApi.ts  useIPA.ts  useKeyboardLayout.ts  useMetrics.ts  useMidi.ts  usePlayer.ts  usePrompt.ts  usePromptToPayload.ts  useSettings.ts  useStoreSlices.ts  useThemeMode.ts  useViewport.ts  useVisType.ts
src/lib/: wasm.ts  (+2 more)
wasm-audio/: Cargo.toml  LICENSE_MIT
wasm-audio/src/: lib.rs
(+82 files in other folders)
